--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Simple React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Kickstarter</title>
+  <link rel="shortcut icon" type="image/png" href="https://logodix.com/logo/767992.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
