--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta property="og:title" content="Project Title" />
+  <meta property="og:image" content="Featured.jpg" />
+  <meta
+    property="og:description"
+    content="A brief description of your project"
+  />
+  <meta
+    property="og:url"
+    content="https://programmer.github.io/project_name"
+  />
   <title>Kickstarter</title>
   <link rel="shortcut icon" type="image/png" href="https://logodix.com/logo/767992.png" />
 </head>
