--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -11,7 +11,7 @@
   />
   <meta
     property="og:url"
-    content="https://programmer.github.io/project_name"
+    content="https://github.com/boromeot/kickstarter-clone"
   />
   <title>Kickstarter</title>
   <link rel="shortcut icon" type="image/png" href="https://logodix.com/logo/767992.png" />
