--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta property="og:title" content="Project Title" />
-  <meta property="og:image" content="Featured.jpg" />
+  <meta name="theme-color" content="#000000" />
+
+  <meta property="og:title" content="Project Title TEST" />
+  <meta property="og:image" content="%PUBLIC_URL%/Featured.jpg" />
   <meta
     property="og:description"
-    content="A brief description of your project"
+    content="description TEST"
   />
   <meta
     property="og:url"
