--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <meta property="og:title" content="Project Title TEST" />
+  <meta property="og:title" content="Kickstarter Clone" />
   <meta property="og:image" content="%PUBLIC_URL%/Featured.jpg" />
   <meta
     property="og:description"
-    content="description TEST"
+    content="A Kickstarter Clone using a React frontend and Flask Backend."
   />
   <meta
     property="og:url"
