--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
 
   <meta property="og:title" content="Kickstarter Clone" />
-  <meta name="image" property="og:image" content="react-app/public/Featured.jpg">
+  <meta property="og:image" content="%PUBLIC_URL%/Featured.jpg" />
   <meta
     property="og:description"
     content="A Kickstarter Clone using a React frontend and Flask Backend."
