--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
 
   <meta property="og:title" content="Kickstarter Clone" />
-  <meta name="image" property="og:image" content="https://kickstarter-clone-aa.herokuapp.com/react-app/public/Featured.jpg">
+  <meta name="image" property="og:image" content="https://i.imgur.com/IfMM0Tj.jpg">
   <meta
     property="og:description"
     content="A Kickstarter Clone using a React frontend and Flask Backend."
